--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="bn">
   <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9563326566807283"
-     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../style.css">
-    <title>লাইন লেখা শাস্তি</title>
-    <meta name="google" content="notranslate">
-    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-    <link rel="manifest" href="../site.webmanifest">
-    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="description" content="শাস্তি হিসেবে আপনাকে কি কখনো একটি বাক্য অনেক বার লিখতে হয়েছে? এটি একটি লাইন লেখা শাস্তির ওয়েবসাইট। এই ওয়েবসাইটটি শিক্ষার্থীদের জন্য একটি শাস্তির অনুকরণ করে।">
-    <meta name="keywords" content="লাইন শাস্তি, লাইনের শাস্তি, লাইন লেখা শাস্তি, লেখার শাস্তি, শাস্তি হিসেবে লেখা">
+    <title>Aishik Writes</title>
+   
+    <meta name="description" content="Explore the literary works, thoughts, and insights of Aishik, a passionate author dedicated to storytelling and poetry that resonates with readers">
+    <meta name="keywords" content="Aishik, Aishik Dutta">
   </head>
   <body>
     <h1>Author's Profile</h1>
@@ -794,140 +785,5 @@ button {
   }
 }
     </style>
-    <script>
-      function convertBengaliToArabic(bengaliNumber) {
-        const bengaliToArabicMap = {
-          '০': '0',
-          '১': '1',
-          '২': '2',
-          '৩': '3',
-          '৪': '4',
-          '৫': '5',
-          '৬': '6',
-          '৭': '7',
-          '৮': '8',
-          '৯': '9'
-        };
-        let arabicNumber = '';
-        for (let i = 0; i < bengaliNumber.length; i++) {
-          const char = bengaliNumber.charAt(i);
-          arabicNumber += bengaliToArabicMap[char] || char;
-        }
-        return arabicNumber;
-      }
-
-      function validateInput(event) {
-        var input = event.target.value;
-        var numeralsRegex = /^[\d\u09E6-\u09EF]+$/;
-        if (!input.match(numeralsRegex)) {
-          event.target.value = input.replace(/[^\d\u09E6-\u09EF]/g, '');
-        }
-      }
-      document.addEventListener("DOMContentLoaded", function() {
-        var input = document.getElementById("input");
-        var number = document.getElementById("number");
-        var box = document.getElementById("box");
-        var result1 = document.getElementById("result1");
-        var result2 = document.getElementById("result2");
-        var result3 = document.getElementById("result3");
-        var count = 0;
-
-        function lock1() {
-          var value1 = input.value.trim();
-          if (value1 === "") {
-            result1.innerHTML = "একটি বাক্য লিখুন!";
-            result1.style.color = "rgb(75, 0, 130)";
-            result1.style.fontWeight = "bold";
-            return;
-          } else {
-            input.disabled = true;
-            input.style.backgroundColor = "#ccc";
-            result1.innerHTML = "";
-            input.focus();
-            removeButton("button1");
-          }
-        }
-
-        function lock2() {
-          var value2 = number.value.trim();
-          if (value2 === "") {
-            result2.innerHTML = "একটি নম্বর লিখুন!";
-            result2.style.color = "rgb(75, 0, 130)";
-            result2.style.fontWeight = "bold";
-            return;
-          } else {
-            number.disabled = true;
-            number.style.backgroundColor = "#ccc";
-            result1.innerHTML = "";
-            result2.innerHTML = "";
-            number.focus();
-            removeButton("button2");
-          }
-        }
-
-        function lock3() {
-          var sentence = input.value;
-          var num = parseInt(convertBengaliToArabic(number.value.trim()));
-          var value3 = box.value;
-          if (value3 === "") {
-            result3.innerHTML = "বাক্যটি টাইপ করুন!";
-            result3.style.color = "rgb(75, 0, 130)";
-            result3.style.fontSize = "x-large";
-            result3.style.fontWeight = "bold";
-            return;
-          }
-          if (value3 === sentence) {
-            count++;
-            box.value = "";
-            if ((count === num)) {
-              result3.innerHTML = "আপনার শাস্তি শেষ। আপনি '" + sentence + "'  বাক্যটি টাইপ করেছেন " + count.toLocaleString("bn") + " বার।";
-              result3.style.color = "#000";
-              result3.style.fontSize = "x-large";
-              result3.style.fontWeight = "bold";
-              var p = document.createElement("p");
-              p.innerHTML = sentence;
-              var boxElement = document.getElementById("box");
-              boxElement.placeholder = sentence;
-              box.disabled = true;
-              box.style.backgroundColor = "#ccc";
-              removeButton("button3");
-            } else {
-              result3.innerHTML = "আপনি '" + sentence + "'  বাক্যটি টাইপ করেছেন " + count.toLocaleString("bn") + " বার। চোলতে থাকুন।";
-              result3.style.color = "#00f";
-              result3.style.fontSize = "x-large";
-              result3.style.fontWeight = "bold";
-            }
-          } else {
-            result3.innerHTML = "ভুল! আপনি যেমন নির্দিষ্ট করেছেন তেমন হুবহু বাক্যটি টাইপ করতে হবে।";
-            result3.style.color = "rgb(75, 0, 130)";
-            result3.style.fontSize = "x-large";
-            result3.style.fontWeight = "bold";
-          }
-        }
-
-        function removeButton(id) {
-          var elem = document.getElementById(id);
-          elem.parentNode.removeChild(elem);
-        }
-        document.getElementById("button1").addEventListener("click", lock1);
-        document.getElementById("button2").addEventListener("click", lock2);
-        document.getElementById("button3").addEventListener("click", lock3);
-        input.addEventListener("keyup", function(event) {
-          if (event.key === 'Enter') {
-            lock1();
-          }
-        });
-        number.addEventListener("keyup", function(event) {
-          if (event.key === 'Enter') {
-            lock2();
-          }
-        });
-        box.addEventListener("keyup", function(event) {
-          if (event.key === 'Enter') {
-            lock3();
-          }
-        });
-      });
-    </script>
   </body>
 </html>
