--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <br>
         <h2 style="text-decoration: underline;">My Works</h2>
         <br>
+       <h3>Inspirational Poems on University Life</h3>
         <img width="200px" height="300px" src="bookcover.png"></img>
         <br><br>
       <div style="text-align: center; font-family: 'Times New Roman', Times, serif; width: 95%; margin-left: auto; margin-right: auto;"> Embark on an emotional and inspirational journey with "Inspirational Poems on University Life," a thoughtfully curated collection of poems that captures the myriad experiences of university life through the powerful medium of poetry. This collection brings together a diverse array of poems that delve into the essence of academic and personal growth, making it a perfect companion for students, educators, and alumni. Explore the excitement of stepping onto campus for the first time, the challenges and triumphs of academic endeavors, and the invaluable lessons learned both inside and outside the classroom. Each poem reflects the unique experiences that shape a student's journey, celebrating the highs of success and the resilience built through moments of adversity.
